# termostablizator

./: .deepsource.toml  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  README.md  css.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  sou.py
test/: test_E_compute.py
tests/: test_E_compute.py
