[metadata]
name = termostabilizator
author = Leor Finkelberg
author-email = leor.finkelberg@yandex.ru
license = MIT
logn_description = file: README.md
url = https://github.com/LeorFinkelberg/termostablizator.git
requires-python = >=3.6
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operation System :: OS Independent
    Programming Language :: Python
